--- a/src/__docz__/index.mdx
+++ b/src/__docz__/index.mdx
@@ -16,45 +16,104 @@ import githubSvg from '../__docz__/images/github.svg';
 	alignItems: 'center',
 }}>
   <div>
-    <h1>React Library Starter</h1>
+    <h1>React Super SEO</h1>
   </div>
   <div>
-    <a href="https://github.com/devboldly/react-library-starter" target="_blank" rel="noopener noreferrer">
+    <a href="https://github.com/devboldly/react-super-seo/" target="_blank" rel="noopener noreferrer">
       <SvgIcon src={githubSvg} size={28} style={{ margin: '0 0 0 20px' }} />
     </a>
   </div>
 </div>
 
-**This header will contain a brief description of the project.**
-
-👁️ **[Live Demo](/ExampleComponent#example)**
+**The React SEO component that handles metadata so you don't have to. Supports Google, OpenGraph, Twitter, and beyond. 🚀**
 
 ## Overview
 
-This section will contain an overview so people can have a high-level understanding of the project.
+This component adds SEO (search engine optimization) metadata tags to the `head` element for you. It includes full support for [OpenGraph](https://ogp.me/), [Twitter Cards](https://developer.twitter.com/en/docs/tweets/optimize-with-cards/overview/abouts-cards), and [Google](https://support.google.com/webmasters/answer/79812?hl=en), as well as support for numerous popular meta tags, and any custom tags you might want to add beyond that!
+
+👁️ **[Live Demo](/SuperSEO#usage)**
+
+### Why Super SEO?
+
+There are no less than a hundred different React SEO components floating around the web, and most have half-baked or zero support for OpenGraph, and many don't support Twitter Cards at all. Worse, documentation for them is sparse.
+
+The goal of this project was to create the end all, be all, super SEO component for React.
+
+This component supports OpenGraph and Twitter Cards fully, and includes TypeScript type definitions and fully documented code (including image size recommendations from the official specs) for an enjoyable coding experience. It also falls back where possible and infers MIME types automatically. 
+
+Is it super? You decide!
 
 ### Features include:
 
-- **🚀 List your features, use fun [emojis](https://emojipedia.org/search/?q=rocket)**
-  - Give a little more info on each feature or mention benefits.
+- **🔌 Essential tags** 
+  - Supports essential SEO tags like `title`, `description`, and more.
+- **💯 Full OpenGraph and Twitter Cards support**
+  - Control how your content appears on the most popular social networks.
+- **💁 Metadata fallback**
+  - OpenGraph and Twitter Cards fall back on title and description automatically.
+- **🕷️ Crawler configuration**
+  - Configure search engine crawlers with `robots` and `googlebot`.
+- **✅ Google site verification**
+  - Easily add your verification meta tag for Google Search Console.
+- **⚒️ Custom meta tags**
+  - Need to include something else? Custom meta tags are quick and painless.
+- **🖼️ Automatic MIME type inference**
+  - Media MIME types are inferred automatically, meaning one less thing to configure.
+- **✨ TypeScript support and rich documentation**
+  - Includes full TypeScript type definitions and rich documentation, inside and out. Knowledge is power!
 
 ## Installation
 
 ```
-npm i @devboldly/react-library-starter
+npm i react-super-seo
 ```
 
 ## Quick Start
 
-This section will contain a copy/paste example so people can get started quickly.
-
 ```jsx
-import { ExampleComponent } from '@devboldly/react-library-starter';
+import { SuperSEO } from 'react-super-seo';
 ```
 
 ```jsx
-<ExampleComponent text="Example Component"/>
+<SuperSEO
+  title="Home | React Super SEO"
+  description="React SEO component with OpenGraph and Twitter Cards support."
+  lang="en"
+  openGraph={{
+    ogImage: {
+      ogImage: 'http://placekitten.com/1200/630',
+      ogImageAlt: 'Kittens',
+      ogImageWidth: 1200,
+      ogImageHeight: 630,
+      ogImageType: 'image/jpeg',
+    },
+  }}
+  twitter={{
+    twitterSummaryCard: {
+      summaryCardImage: 'http://placekitten.com/1200/630',
+      summaryCardImageAlt: 'Kittens',
+      summaryCardSiteUsername: 'devboldly',
+    },
+  }}
+/>
 ```
+
+### Custom Meta Tags
+
+Wrap custom meta tags with `SuperSEO`. They will be rendered directly inside the `head` element.
+
+```jsx
+<SuperSEO
+  title="My Page"
+  description="An awesome page that does a lot of cool stuff"
+>
+  <meta name="custom-meta" content="my-value" />
+  <meta property="custom-meta-2" content="my-other-value" />
+</SuperSEO>
+```
+
+
+Refer to the [SuperSEO component](/SuperSEO) usage for all available options.
 
 ## TypeScript
 
@@ -68,6 +127,6 @@ For major changes, open an issue first to discuss what you'd like to change.
 
 See the [library template](https://tinyurl.com/ya3k258d) for npm script documentation.
 
-## ⭐ Found It Helpful? [Star It!](https://github.com/devboldly/react-library-starter/stargazers)
+## ⭐ Found It Helpful? [Star It!](https://github.com/devboldly/react-super-seo/stargazers)
 
-If you found this project helpful, let the community know by giving it a [star](https://github.com/devboldly/react-library-starter/stargazers): [👉⭐](https://github.com/devboldly/react-library-starter/stargazers)
+If you found this project helpful, let the community know by giving it a [star](https://github.com/devboldly/react-super-seo/stargazers): [👉⭐](https://github.com/devboldly/react-super-seo/stargazers)
