--- a/src/__docz__/index.mdx
+++ b/src/__docz__/index.mdx
@@ -27,6 +27,8 @@ import githubSvg from '../__docz__/images/github.svg';
 
 **The React SEO component that handles metadata so you don't have to. Supports Google, OpenGraph, Twitter, and beyond. 🚀**
 
+<a href="https://devboldly.github.io/react-super-seo/SuperSEO#usage"><img src={demoGif} /></a>
+
 ## Overview
 
 This component adds SEO (search engine optimization) metadata tags to the `head` element for you. It includes full support for [OpenGraph](https://ogp.me/), [Twitter Cards](https://developer.twitter.com/en/docs/tweets/optimize-with-cards/overview/abouts-cards), and [Google](https://support.google.com/webmasters/answer/79812?hl=en), as well as support for numerous popular meta tags, and any custom tags you might want to add beyond that!
