Update project details and deps

--- a/src/__docz__/index.mdx
+++ b/src/__docz__/index.mdx
@@ -20,7 +20,7 @@ import demoGif from '../__docz__/images/demo.gif';
     <h1>React Super SEO</h1>
   </div>
   <div>
-    <a href="https://github.com/devboldly/react-super-seo/" target="_blank" rel="noopener noreferrer">
+    <a href="https://github.com/justinmahar/react-super-seo/" target="_blank" rel="noopener noreferrer">
       <SvgIcon src={githubSvg} size={28} style={{ margin: '0 0 0 20px' }} />
     </a>
   </div>
@@ -28,7 +28,7 @@ import demoGif from '../__docz__/images/demo.gif';
 
 **The React SEO component that handles metadata so you don't have to. Supports Google, OpenGraph, Twitter, and beyond. 🚀**
 
-<a href="https://devboldly.github.io/react-super-seo/SuperSEO#usage"><img src={demoGif} /></a>
+<a href="https://justinmahar.github.io/react-super-seo/SuperSEO#usage"><img src={demoGif} /></a>
 
 ## Overview
 
@@ -95,7 +95,7 @@ import { SuperSEO } from 'react-super-seo';
     twitterSummaryCard: {
       summaryCardImage: 'http://placekitten.com/1200/630',
       summaryCardImageAlt: 'Kittens',
-      summaryCardSiteUsername: 'devboldly',
+      summaryCardSiteUsername: 'justinmahar',
     },
   }}
 />
@@ -132,6 +132,6 @@ For major changes, open an issue first to discuss what you'd like to change.
 
 See [Kindling](https://tinyurl.com/kindlingscripts) for npm script documentation.
 
-## ⭐ Found It Helpful? [Star It!](https://github.com/devboldly/react-super-seo/stargazers)
+## ⭐ Found It Helpful? [Star It!](https://github.com/justinmahar/react-super-seo/stargazers)
 
-If you found this project helpful, let the community know by giving it a [star](https://github.com/devboldly/react-super-seo/stargazers): [👉⭐](https://github.com/devboldly/react-super-seo/stargazers)
+If you found this project helpful, let the community know by giving it a [star](https://github.com/justinmahar/react-super-seo/stargazers): [👉⭐](https://github.com/justinmahar/react-super-seo/stargazers)
