--- a/src/stories/SuperSEO.stories.mdx
+++ b/src/stories/SuperSEO.stories.mdx
@@ -20,7 +20,7 @@ Supports the following:
 - [Rating](https://support.google.com/webmasters/answer/79812?hl=en) (for adult content)
 - **Everything else!** Just wrap custom meta tags with `SuperSEO`
 
-Uses sensible fallbacks where possible and features automatic [MIME type inference](/list-of-mime-types) for media URLs.
+Uses sensible fallbacks where possible and features automatic [MIME type inference](https://justinmahar.github.io/react-super-seo/?path=/story/docs-list-of-mime-types--page) for media URLs.
 
 Includes full TypeScript type definitions and rich documentation, inside and out. 🙌
 
